@@ -61,6 +61,11 @@ addition (a) the default limit for groups requested by -o<n> has been raised to
 50, (b) the new --om-capture option changes the limit, (c) an error is raised 
 if -o asks for a group that is above the limit.
 
+12. The quantifier {1} was always being ignored, but this is incorrect when it
+is made possessive and applied to an item in parentheses, because a
+parenthesized item may contain multiple branches or other backtracking points,
+for example /(a|ab){1}+c/ or /(a+){1}+a/.
+
 
 Version 10.33 16-April-2019
 ---------------------------
